# scraping_and_eda_marks

./: .gitignore  README.md  pyproject.toml
eda/bda_eda/: eda_bda.ipynb
eda/ces_eda/: exploratory_analysis_ces.ipynb
scraping/bda_scraping/: scraping_bda_p1.py  scraping_bda_p2.py  scraping_bda_t1.py
scraping/ces_scraping/: scraping_ces_p.py  scraping_ces_t1.py
